fix: overflow

--- a/app/(writing)/[...slug]/styles.module.css
+++ b/app/(writing)/[...slug]/styles.module.css
@@ -98,6 +98,6 @@
   max-width: 640px;
   padding-block-start: 128px;
   padding-block-end: 256px;
-
+  width: 100%;
   margin: 0 auto;
 }
